updating the files

--- a/main/Video_playback/movies/code-8_part-2.html
+++ b/main/Video_playback/movies/code-8_part-2.html
@@ -135,7 +135,7 @@
         </div>
         <div class="castmembers-director">
             <div class="castmembers-details">
-                <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                <img src="/content-images/Cast-Members/Jeff_Chan.png" alt="">
                 <span>
                     <h4>Jeff Chan</h4>
                     <h2>Director | Writer | Producer</h2>
@@ -149,45 +149,31 @@
         <div class="castmembers-writers">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Jeff_Chan.png" alt="">
                     <span>
                         <h4>Jeff Chan</h4>
                         <h2>Director | Writer | Producer</h2>
                     </span>
                 </div>
 
-                <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                    <span>
-                        <h4>Chris Pare</h4>
-                        <h2>Writer</h2>
-                    </span>
-                </div>
+
             </span>
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Sherren-Lee.jpg" alt="">
                     <span>
                         <h4>Sherren Lee</h4>
                         <h2>Writer</h2>
                     </span>
                 </div>
-
-                <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                    <span>
-                        <h4>Jesse LaVercombe</h4>
-                        <h2>Writer</h2>
-                    </span>
-                </div>
             </span>
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                    <img src="" alt="">
                     <span>
-                        <h4>Tom Selenow</h4>
+                        <h4>Chris Pare</h4>
                         <h2>Writer</h2>
                     </span>
                 </div>
@@ -202,7 +188,7 @@
         <div class="castmembers-cast">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Robbie-Amell.jpg" alt="">
                     <span>
                         <h4>Robbie Amell</h4>
                         <h2>As Connor</h2>
@@ -210,7 +196,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Stephen-Amell.jpg" alt="">
                     <span>
                         <h4>Stephen Amell</h4>
                         <h2>As Garrett</h2>
@@ -221,7 +207,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Alex-Mallari-Jr..jpg" alt="">
                     <span>
                         <h4>Alex Mallari Jr.</h4>
                         <h2>As Sergeant 'King' Kingston</h2>
@@ -229,7 +215,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Sirena-Gulamgaus.jpg" alt="">
                     <span>
                         <h4>Sirena Gulamgaus</h4>
                         <h2>As Pavani</h2>
@@ -239,7 +225,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Aaron-Abrams.jpg" alt="">
                     <span>
                         <h4>Aaron Abrams</h4>
                         <h2>As Detective Davis</h2>
