--- a/main/Video_playback/movies/harrypotter5.html
+++ b/main/Video_playback/movies/harrypotter5.html
@@ -129,7 +129,7 @@
         </div>
         <div class="castmembers-director">
             <div class="castmembers-details">
-                <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                <img src="/content-images/Cast-Members/David-Yates.jpg" alt="">
                 <span>
                     <h4>David Yates</h4>
                     <h2>Director | Writer | Producer</h2>
@@ -143,7 +143,7 @@
         <div class="castmembers-writers">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Michael-Goldenberg.jpg" alt="">
                     <span>
                         <h4>Michael Goldenberg</h4>
                         <h2>Writer | Director | Producer</h2>
@@ -153,7 +153,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/J.K.-Rowling.jpg" alt="">
                     <span>
                         <h4>J.K. Rowling</h4>
                         <h2>Writer | Producer | Additional Crew</h2>
@@ -181,7 +181,7 @@
         <div class="castmembers-cast">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Daniel-Radcliffe.jpg" alt="">
                     <span>
                         <h4>Daniel Radcliffe</h4>
                         <h2>As Harry Potter</h2>
@@ -189,7 +189,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Rupert-Grint.jpg" alt="">
                     <span>
                         <h4>Rupert Grint</h4>
                         <h2>As Ron Weasley</h2>
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Bonnie-Wright.jpg" alt="">
                     <span>
                         <h4>Bonnie Wright</h4>
                         <h2>As Ginny Weasley</h2>
@@ -208,7 +208,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Emma-Watson.jpg" alt="">
                     <span>
                         <h4>Emma Watson</h4>
                         <h2>As Hermione Granger</h2>
@@ -216,7 +216,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Ralph-Fiennes.jpg" alt="">
                     <span>
                         <h4>Ralph Fiennes</h4>
                         <h2>As Lord Voldemort</h2>
@@ -224,7 +224,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Maggie-Smith.jpg" alt="">
                     <span>
                         <h4>Maggie Smith</h4>
                         <h2>As Professor Minerva McGonagall</h2>
@@ -234,7 +234,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Alan-Rickman.jpg" alt="">
                     <span>
                         <h4>Alan Rickman</h4>
                         <h2>As Professor Severus Snape</h2>
@@ -242,7 +242,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Robbie-Coltrane.jpg" alt="">
                     <span>
                         <h4>Robbie Coltrane</h4>
                         <h2>As Rubeus Hagrid</h2>
@@ -250,7 +250,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-5.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Brendan-Gleeson.jpg" alt="">
                     <span>
                         <h4>Brendan Gleeson</h4>
                         <h2>As Alastor 'Mad-Eye' Moody</h2>
