--- a/main/Video_playback/movies/harrypotter3.html
+++ b/main/Video_playback/movies/harrypotter3.html
@@ -97,7 +97,7 @@
 
         <div class="video-container">
             <video class="video-file" id="myVideo" controls>
-                <source src="/content-videos/movies/HarryPotter-3.mp4" type="video/mp4">
+                <source src="/content-videos/HarryPotter-3.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -131,7 +131,7 @@
         </div>
         <div class="castmembers-director">
             <div class="castmembers-details">
-                <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                <img src="/content-images/Cast-Members/Alfonso-Cuarón.jpg" alt="">
                 <span>
                     <h4>Alfonso Cuarón</h4>
                     <h2>Director | Writer | Producer</h2>
@@ -145,7 +145,7 @@
         <div class="castmembers-writers">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Steve-Kloves.jpg" alt="">
                     <span>
                         <h4>Steve Kloves</h4>
                         <h2>Writer | Director | Producer</h2>
@@ -155,7 +155,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/J.K.-Rowling.jpg" alt="">
                     <span>
                         <h4>J.K. Rowling</h4>
                         <h2>Writer | Producer | Additional Crew</h2>
@@ -183,7 +183,7 @@
         <div class="castmembers-cast">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Daniel-Radcliffe.jpg" alt="">
                     <span>
                         <h4>Daniel Radcliffe</h4>
                         <h2>As Harry Potter</h2>
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Rupert-Grint.jpg" alt="">
                     <span>
                         <h4>Rupert Grint</h4>
                         <h2>As Ron Weasley</h2>
@@ -199,7 +199,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Gary-Oldman.jpg" alt="">
                     <span>
                         <h4>Gary Oldman</h4>
                         <h2>As Sirius Black</h2>
@@ -210,7 +210,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Emma-Watson.jpg" alt="">
                     <span>
                         <h4>Emma Watson</h4>
                         <h2>As Hermione Granger</h2>
@@ -218,7 +218,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/James-Phelps.jpg" alt="">
                     <span>
                         <h4>James Phelps</h4>
                         <h2>As Fred Weasley</h2>
@@ -226,7 +226,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Maggie-Smith.jpg" alt="">
                     <span>
                         <h4>Maggie Smith</h4>
                         <h2>As Professor Minerva McGonagall</h2>
@@ -236,7 +236,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Alan-Rickman.jpg" alt="">
                     <span>
                         <h4>Alan Rickman</h4>
                         <h2>As Professor Severus Snape</h2>
@@ -244,7 +244,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Robbie-Coltrane.jpg" alt="">
                     <span>
                         <h4>Robbie Coltrane</h4>
                         <h2>As Rubeus Hagrid</h2>
@@ -252,7 +252,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-3.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Oliver-Phelps.jpg" alt="">
                     <span>
                         <h4>Oliver Phelps</h4>
                         <h2>As George Weasley</h2>
