--- a/main/Video_playback/movies/harrypotter4.html
+++ b/main/Video_playback/movies/harrypotter4.html
@@ -128,7 +128,7 @@
         </div>
         <div class="castmembers-director">
             <div class="castmembers-details">
-                <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                <img src="/content-images/Cast-Members/Mike-Newell.jpg" alt="">
                 <span>
                     <h4>Mike Newell</h4>
                     <h2>Director | Producer | Executive</h2>
@@ -142,7 +142,7 @@
         <div class="castmembers-writers">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Steve-Kloves.jpg" alt="">
                     <span>
                         <h4>Steve Kloves</h4>
                         <h2>Writer | Director | Producer</h2>
@@ -152,7 +152,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/J.K.-Rowling.jpg" alt="">
                     <span>
                         <h4>J.K. Rowling</h4>
                         <h2>Writer | Producer | Additional Crew</h2>
@@ -180,7 +180,7 @@
         <div class="castmembers-cast">
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Daniel-Radcliffe.jpg" alt="">
                     <span>
                         <h4>Daniel Radcliffe</h4>
                         <h2>As Harry Potter</h2>
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Rupert-Grint.jpg" alt="">
                     <span>
                         <h4>Rupert Grint</h4>
                         <h2>As Ron Weasley</h2>
@@ -196,7 +196,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Bonnie-Wright.jpg" alt="">
                     <span>
                         <h4>Bonnie Wright</h4>
                         <h2>As Ginny Weasley</h2>
@@ -207,7 +207,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Emma-Watson.jpg" alt="">
                     <span>
                         <h4>Emma Watson</h4>
                         <h2>As Hermione Granger</h2>
@@ -215,7 +215,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Ralph-Fiennes.jpg" alt="">
                     <span>
                         <h4>Ralph Fiennes</h4>
                         <h2>As Lord Voldemort</h2>
@@ -223,7 +223,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Maggie-Smith.jpg" alt="">
                     <span>
                         <h4>Maggie Smith</h4>
                         <h2>As Professor Minerva McGonagall</h2>
@@ -233,7 +233,7 @@
 
             <span>
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Alan-Rickman.jpg" alt="">
                     <span>
                         <h4>Alan Rickman</h4>
                         <h2>As Professor Severus Snape</h2>
@@ -241,7 +241,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Robbie-Coltrane.jpg" alt="">
                     <span>
                         <h4>Robbie Coltrane</h4>
                         <h2>As Rubeus Hagrid</h2>
@@ -249,7 +249,7 @@
                 </div>
 
                 <div class="castmembers-details">
-                    <img src="/content-images/Movies/Harry-Potter-4.jpg" alt="">
+                    <img src="/content-images/Cast-Members/Robert-Pattinson.jpg" alt="">
                     <span>
                         <h4>Robert Pattinson</h4>
                         <h2>As Cedric Diggory</h2>
